# drone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  cmake-single-platform.yml
arduino_prototype/: controller.cpp  controller.h  main.ino
doc/: blade_design.ipynb  part_choice.ipynb
doc/blade_data/: 11.xlsx  12.xlsx  16.xlsx  17.xlsx  18.xlsx  19.xlsx  21.xlsx  22.xlsx  23.xlsx  25.xlsx  26.xlsx  27.xlsx  28.xlsx  31.xlsx  4.xlsx  6.xlsx  9.xlsx
docs/: REQUIREMENTS.md  twin_blade_design.ipynb
docs/blade_data/: 10.xlsx  13.xlsx  14.xlsx  15.xlsx  2.xlsx  20.xlsx  24.xlsx  29.xlsx  3.xlsx  30.xlsx  5.xlsx  7.xlsx  8.xlsx
drone/: Adafruit_BMP280.cpp  Adafruit_BMP280.h  Adafruit_BNO055.cpp  Adafruit_BNO055.h  Adafruit_Sensor.h  CMakeLists.txt  CrsfSerial.cpp  CrsfSerial.h  bno055.cpp  cal.h  control.cpp  control.h  crsf_protocol.h  main.c  main.cpp  motor.cpp  motor.h  observer.cpp  observer.h
ekf/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  RTIMULib.ini  eskf.h  ins_data.csv  library.json  main.cpp  main_mock.cpp  requirements.txt
ekf-teensy/: TODO.md  platformio.ini
ekf-teensy/include/: baro.h  bmp280_baro.h  bno055_imu.h  bno055_mag.h  gnss.h  imu.h  mag.h  sensor_base.h  teensy_sensor_logger.h  ublox_gnss.h
ekf-teensy/src/: main.cpp
ekf-teensy/test/: test_main.cpp
ekf/data/: .gitignore  ins_data.csv  plot_data.py  sensor_data.csv  tune.py
ekf/model/: .gitignore  deriv-full.tex  deriv.tex
ekf/rpi/: gps_interface.cpp  gps_interface.h  gps_logger.cpp  main.cpp  sense_hat_logger.cpp
ekf/shared/: ekf.h  ekf16.cpp  ekf16.h  ekf16d.cpp  ekf16d.h  ekf16d_opt.cpp  ekf16d_opt.h  ekf16f.h  ekf_defs.h  ekf_utils.h  eskf.cpp  eskf.h  sensor_io.h  tuned_ekf_params.h  tuned_imu_params.h  utils.h
ekf/tests/: mock_sensor_data.h  test_ekf16.cpp  test_eskf.cpp  test_eskf_integration.cpp  test_eskf_simple.cpp  test_eskf_unit.cpp
loading/: B.txt  CMakeLists.txt  bi-blade.csv  blade_comparison.py  esc_record.py  loading.c  loading.cpp  loading_cmd.cpp  no-blade.csv  odrive_record.py  plotter.py  power_vs_thrust.eps  speed_vs_thrust.eps  toroidal.csv  tri-blade.csv
loading/data/: A.txt  C.txt  D.txt  bi-blade.csv  bi-blade_esc.csv  toroidal.csv  toroidal_esc.csv  tri-blade.csv  tri-blade_esc.csv
loading/figures/: power_vs_thrust.eps  speed_vs_thrust.eps  speed_vs_thrust_hysteresis.eps  throttle_vs_thrust.eps
pwm/: CMakeLists.txt  hello_pwm.c  pwm_example.c
report/: .gitignore  report.tex
shared/: controller.h  library.json  observer.h
shared/blocks/: altitude_hold.hpp  attitude_controller.hpp  controller.hpp  pid.hpp  quadrotor_ekf.hpp  quadrotor_vehicle.hpp  unit_delay.hpp
shared/core/: block.hpp  block_factory.hpp  graph.hpp  graph_loader.hpp  interblock_data.hpp  misuse.hpp  tracer.hpp
shared/data/: gnss_origin.hpp  state.hpp
shared/sensors/: baro_sensor_base.h  gnss_sensor_base.h  imu_sensor_base.h  mag_sensor_base.h  sensor_base.h  sensor_constants.h  sensor_interface.h  sensor_readings.h  sensor_readings.hpp
shared/types/: control.h  reference.h  state.h
sim/: CMakeLists.txt  CMakePresets.json  plot_impulse.py  sim.code-workspace
sim/configs/: ekf_compare.json  quad.json
sim/editor/: CMakeLists.txt  app_state.hpp  canvas_view.hpp  demo_toggle.hpp  frame_clock.hpp  graph_layout.hpp  main.cpp  recent_files.hpp  run_state.hpp  status_bar.hpp
sim/src/: main.cpp  sim_ekf_params.h
sim/src/blocks/: altitude_hold.hpp  controller.hpp  dynamics.hpp  dynamics_model.hpp  force_disturbance.hpp  observer.hpp  pid.hpp  reference_generator.hpp  sensors_impl.hpp  signal_generator.hpp  sim_sensor.hpp
sim/src/core/: block.hpp  inter_block_data.hpp  interblock_data.hpp  simulation.hpp
sim/src/data/: control_efforts.hpp  gnss_origin.hpp  reference.hpp  sensor_reading.hpp  state.hpp
sim/src/quadcopter/: controller.hpp  dynamics.hpp  motor.hpp  motor_efforts.hpp  observer.hpp  pid_controller.hpp  plant.hpp  quadrotor_dynamics.hpp  registrations.hpp  state.hpp  system.hpp
sim/tests/: CMakeLists.txt  test_block_core.cpp  test_quadrotor_dynamics.cpp
tests/: CMakeLists.txt  CMakePresets.json
tests/editor/: test_app_state.cpp  test_demo_toggle.cpp  test_frame_clock.cpp  test_graph_layout.cpp  test_recent_files.cpp  test_run_state.cpp  test_status_bar.cpp
tests/mocks/: mock_block.h  mock_observer.h
tests/shared/: test_block_factory.cpp  test_graph.cpp  test_graph_dump.cpp  test_graph_loader.cpp  test_graph_mutation.cpp  test_iport.cpp  test_tracer.cpp
tests/shared/blocks/: test_altitude_hold.cpp  test_pid.cpp  test_quadrotor_ekf.cpp  test_unit_delay.cpp
tests/sim/: test_block_core.cpp  test_graph_roundtrip.cpp
tuning/: CMakeLists.txt  collection.cpp  plot_gui.py  record.py  sim.py
tuning/AV Matlab_SW/: 6ax_raw.mat  ASD_Marble_slab.mat  ASD_plot_generation.m  opt_NBK_6_axes.m  resultsX_opt_NBK_parameters.mat  resultsY_opt_NBK_parameters.mat  resultsZ_opt_NBK_parameters.mat
